fix: Footer covering the display of links

--- a/src/collection/links.css
+++ b/src/collection/links.css
@@ -7,6 +7,10 @@
 	display: flex;
 }
 
+.collection {
+	margin: 0 0 1.6em 0;
+}
+
 .collection ul {
 	display: inline-block;
 	list-style: none;
